# llimage

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  app.py  create_test_pdfs.py  llimage_mvp.md  llimage_phase2.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
cline_docs/: codebaseSummary.md  currentTask.md  projectRoadmap.md  techStack.md
config/: default.json  logging.json
llimage/: __init__.py
llimage/chart/: __init__.py  detector.py  extractor.py
llimage/chart/tests/: test_data_extraction.py  test_detector.py  test_enhanced_detection.py  test_real_charts.py  test_shape_classification_accuracy.py
llimage/image/: __init__.py  opencv.py  processor.py
llimage/image/tests/: test_opencv.py
llimage/output/: __init__.py  json.py  text.py
llimage/output/tests/: test_init.py  test_json.py  test_text.py
static/: script.js  style.css
templates/: index.html
tests/: test_basic.py
