[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llimage"
version = "0.2.0"
description = "A Python library for efficient image processing and analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Tyler Crawford" },
]
dependencies = [
    "Flask>=2.2.5",
    "werkzeug>=2.2.3",
    "pdfplumber>=0.9.0",
    "pytesseract>=0.3.10",
    "pillow>=11.0.0",
    "pdf2image>=1.16.3",
    "pytest>=7.4.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.1",
    "scipy>=1.10.1",
    "python-json-logger>=2.0.7",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
    "llimage/*/tests",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]
